--- a/style.css
+++ b/style.css
@@ -67,3 +67,10 @@ body, .quote-input {
     color: red;
     text-decoration: underline;
 }
+
+.unselectable {
+    -webkit-user-select: none;       
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
