--- a/style.css
+++ b/style.css
@@ -74,3 +74,28 @@ body, .quote-input {
     -ms-user-select: none;
     user-select: none;
 }
+
+.hidden {
+    display: none;
+}
+
+.quote-btn {
+    background-color: #e7cd23;
+    border: none;
+    color: white;
+    padding: 1rem 2rem;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: bold;
+    border-radius: 0.5rem;
+    transition: background-color 0.3s ease;
+}
+
+.quote-btn:hover {
+    background-color: #A1922E;
+    cursor: pointer;
+}
+.quote-result {
+    margin-left: calc(1rem + 2px);
+}
